--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -3,10 +3,11 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "target": "ES2015",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
